# c-studying

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile  flake.nix
src/: cnh.c  countchars.c  countlines.c  detab.c  e_1_10.c  e_1_14.c  e_1_19.c  e_1_23.c  fahrenheit.c  longestline.c
src/c1/: c_1_1.c  countblanks.c  countchars.c  countlines.c  detab.c  e_1_10.c  e_1_13.c  e_1_14.c  e_1_19.c  e_1_22.c  e_1_23.c  e_1_24.c  e_1_9.c  entab.c  fahrenheit.c  longestline.c  longestline_fn_extern.c
src/c2/: NOTES.md  e1.c  e10.c  e2.c  e4.c  e5.c  e6.c  e7.c  e8.c  e9.c
src/c3/: e1.c  e2.c  e3.c  e4.c  e5.c  e6.c
src/c4/: e1.c  e2.c
src/misc/: palindrome.c
src/uni/: animal.c  cnh.c  sets.c
